--- a/index.html
+++ b/index.html
@@ -4,16 +4,40 @@
 	<meta charset="UTF-8">
 	<title>Animal Test</title>
 	<link rel="stylesheet" type="test/css" href="assets/css/style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
 <div class="container">
-	<div id="animalButtons"></div>
+	<div class="row">
+	<div class="col-md-8">
+	<div class="panel panel-default">
+  	<div class="panel-body">
+  		<div id="animalButtons"></div>
+	</div>
+	</div>
+	</div>
+	<div class="col-md-4">
+	<div class="panel panel-default">
+  	<div class="panel-body">
 	<form id="animal-form">
 		<label for="animal-input">Add an animal</label>
 		<input type="text" id="animal-input"><br>
 		<input id=addAnimal type="submit" value="Submit">
 	</form>
+	</div>
+	</div>
+	</div>
+	</div>
+	<div class="row">
+	<div class="col-md-8">
+	<div class="panel panel-default">
+  	<div class="panel-body">
 	<div id="animals"></div>
+	</div>
+	</div>
+	</div>
+	</div>
+	
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> 
 <script src="assets/js/main.js"></script>
